# lgdxrobot-cloud-adapter

./: .gitlab-ci.yml  Dockerfile  README.md
lgdxrobot_cloud_adapter/: CMakeLists.txt  package.xml
lgdxrobot_cloud_adapter/include/lgdxrobot_cloud_adapter/: CloudAdapter.hpp
lgdxrobot_cloud_adapter/proto/: RobotClientsService.proto
lgdxrobot_cloud_adapter/src/: CloudAdapter.cpp  main.cpp
lgdxrobot_cloud_msgs/: package.xml
lgdxrobot_cloud_msgs/msg/: RobotData.msg
lgdxrobot_cloud_msgs/srv/: McuSn.srv
