<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lgdxrobot_cloud_msgs</name>
  <version>1.0.1</version>
  <description>Interfaces for lgdxrobot_cloud_adapter</description>
  <license>MIT</license>
  <maintainer email="info@bristolgram.uk">LGDXRobotics</maintainer>
  <author email="info@bristolgram.uk">LGDXRobotics</author>
  <url type="website">https://lgdxrobot.bristolgram.uk/cloud</url>
  <url type="repository">https://gitlab.com/lgdxrobotics/lgdxrobot-cloud-adapter</url>
  <url type="bugtracker">https://gitlab.com/lgdxrobotics/lgdxrobot-cloud-adapter/-/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
